--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button onclick="showPage('expensesPage')">📄 Expenses Report</button>
         <button onclick="showPage('groceryPage')">🛒 Grocery</button>
         <button onclick="showPage('onlinePage')">💻 Online</button>
-	<button onclick="showPage('marketPage')">🎏 Market</button>
+	<button onclick="showPage('marketPage')">🧺 Market</button>
     </div>
 
     <div id="settingsPage" class="page section">
