--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <button onclick="showPage('groceryPage')">🛒 Grocery</button>
     <button onclick="showPage('onlinePage')">💻 Online</button>
     <button onclick="showPage('marketPage')">🧺 Market</button>
+    <button onclick="logout()">🚪 Logout</button>
   </div>
 
-  <!-- Settings Page -->
   <div id="settingsPage" class="page section">
     <h2>Settings</h2>
     <input type="text" id="newUsername" placeholder="New Username">
@@ -50,7 +50,6 @@
     <button onclick="removeUser()">Remove User</button>
   </div>
 
-  <!-- Expenses Page -->
   <div id="expensesPage" class="page section">
     <h2>Expenses Report</h2>
     <input type="number" id="incomeInput" placeholder="Set Income" />
@@ -66,7 +65,6 @@
     </table>
   </div>
 
-  <!-- Grocery, Online, Market Pages -->
   <div id="groceryPage" class="page section">
     <h2>Grocery Budget</h2>
     <input type="number" id="groceryBudgetInput" placeholder="Set Budget" />
@@ -118,6 +116,12 @@ document.addEventListener('DOMContentLoaded', () => {
     } else {
       document.getElementById('loginError').textContent = 'Invalid credentials';
     }
+  };
+
+  window.logout = function() {
+    document.getElementById('dashboard').style.display = 'none';
+    document.getElementById('loginPage').style.display = 'block';
+    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
   };
 
   window.showPage = id => {
@@ -196,6 +200,7 @@ document.addEventListener('DOMContentLoaded', () => {
     items[index].checked = checked;
     localStorage.setItem(key, JSON.stringify(items));
     loadItems(section);
+    loadExpenses(); // auto-refresh expenses
   };
 
   window.updatePrice = (section, index, value) => {
@@ -207,6 +212,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }
     localStorage.setItem(key, JSON.stringify(items));
     updateSummary(section);
+    loadExpenses(); // auto-refresh expenses
   };
 
   function updateSummary(section) {
@@ -226,7 +232,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }
   };
 
-  function loadExpenses() {
+  window.loadExpenses = function() {
     const income = parseFloat(localStorage.getItem(`${currentUser}_income`) || '0');
     const incomeDate = localStorage.getItem(`${currentUser}_incomeDate`) || '';
     const filterDate = document.getElementById('filterDate')?.value || '';
@@ -254,7 +260,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     document.getElementById('expensesDisplay').textContent = total.toFixed(2);
     document.getElementById('expensesBalance').textContent = (income - total).toFixed(2);
-  }
+  };
 });
 </script>
 </body>
